# cdm_reader_mapper

./: .pre-commit-config.yaml  HISTORY.rst  README.rst  pyproject.toml
cdm_reader_mapper/: __init__.py  cli.py  properties.py  test.py
cdm_reader_mapper/cdm_mapper/: __init__.py  mapper.py  mappings.py  properties.py  table_reader.py  table_writer.py
cdm_reader_mapper/cdm_mapper/codes/: codes_hdlr.py
cdm_reader_mapper/cdm_mapper/not_used/gridded_stats/: gridded_stats.py
cdm_reader_mapper/cdm_mapper/tables/: tables_hdlr.py
cdm_reader_mapper/common/: pandas_TextParser_hdlr.py  utilities.py
cdm_reader_mapper/mdf_reader/: __init__.py  properties.py  read.py
cdm_reader_mapper/mdf_reader/reader/: __init__.py  read_sections.py
cdm_reader_mapper/metmetpy/: __init__.py  properties.py
cdm_reader_mapper/metmetpy/common/: functions.py  logging_hdlr.py
cdm_reader_mapper/metmetpy/datetime/: correct.py  correction_functions.py  model_datetimes.py  validate.py
cdm_reader_mapper/metmetpy/misce/: read_rda.py  regex_tests.py
cdm_reader_mapper/metmetpy/misce/code_liz/: add_date.R  apply_dups.R  classify_ids.R  correct_ids.R  get_dup_uid.R  read_rdsfiles.R
cdm_reader_mapper/metmetpy/platform_type/: __init__.py  correct.py
cdm_reader_mapper/metmetpy/station_id/: validate.py
cdm_reader_mapper/metmetpy/station_id/ancilliary/: origin_to_id_replacement_strings.py
cdm_reader_mapper/metmetpy/station_id/ancilliary/liz_patterns/: dck110.json  dck116.json  dck117.json  dck118.json  dck119.json  dck128.json  dck150.json  dck151.json  dck152.json  dck155.json  dck156.json  dck184.json  dck185.json  dck186.json  dck187.json  dck188.json  dck189.json  dck192.json  dck193.json  dck194.json  dck195.json  dck196.json  dck197.json  dck201.json  dck202.json  dck203.json  dck204.json  dck205.json  dck206.json  dck207.json  dck209.json  dck210.json  dck211.json  dck213.json  dck214.json  dck215.json  dck216.json  dck218.json  dck221.json  dck223.json  (+70 more)
cdm_reader_mapper/metmetpy/station_id/devs/: correct.py  extract_dave.py  icoads_r3000.py  regex.py
cdm_reader_mapper/metmetpy/station_id/devs/correction_maps/: 702_imma1.json  704_imma1.json  721_imma1.json  874_imma1.json  cliwoc_shipLogbookid2_1_imma1.json  ids_to_join_720.json  usmaury_names_c0_imma1.json
cdm_reader_mapper/operations/: corrections.py  inspect.py  replace.py  select.py
ci/requirements/: docs.yml  environment.yml  requirements.txt
docs/: api.rst  conf.py
docs/example_notebooks/: CDM_mapper_example_deck704.ipynb
example_notebooks/: mdf_reader_test_overview.ipynb
tests/: test_cdm.py  test_cli.py
